# FEUP-IART

./: .gitignore  CMakeLists.txt  compile.sh
Project 1/src/: Interface.cpp  astar.cpp  block.h  common.h  node.cpp  search.cpp  search.h
Project 2/src/: ABSearch.java  AlphaBetaSearch.java  BFS.java  Board.java  Game.java  Interface.java  Main.java  Malanca.java  Mancala.java  MinimaxSearch.java  Node.java  Search.java  State.java
src/: Block.cpp  Block.h  DFS.cpp  DFS.h  Interface.cpp  Interface.h  a.out  astar.cpp  astar.h  block.cpp  block.h  main.cpp  node.cpp  node.h  search.cpp  search.h  state.cpp  state.h
